--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
+black==21.10b0
 click==8.0.3
 Flask==2.0.2
+Flask-Login==0.5.0
+greenlet==1.1.2
 gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
+lorem==0.1.1
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
+passlib==1.7.4
+pathspec==0.9.0
+peewee==3.14.8
+platformdirs==2.4.0
 Pygments==2.10.0
+regex==2021.11.2
+tomli==1.2.2
+typing-extensions==3.10.0.2
 Werkzeug==2.0.2
